align correctly

--- a/core/template/dashboard/css/style.css
+++ b/core/template/dashboard/css/style.css
@@ -80,8 +80,8 @@
 .blocPlayH{
 	display: block;
 	position: absolute;
-	top: 5px;
-	left: 92px;
+	top: 9px;
+	left: 93px;
 }
 
 /*Artwork*/
